1688admin : frame wip

--- a/bower.json
+++ b/bower.json
@@ -41,6 +41,7 @@
     "owl.carousel": "^2.2.1",
     "jquery-1.12.3": "jQuery#1.12.3",
     "jquery": "^3.2.1",
-    "highcharts": "^5.0.14"
+    "highcharts": "^5.0.14",
+    "iscroll": "^5.2.0"
   }
 }
