--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+package-lock.json
 node_modules
 bower_components
 build/
