--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dolphin",
+  "name": "mutueyeweb",
   "version": "1.0.0",
-  "description": "Dolphin web template",
+  "description": "web frontend playground",
   "main": "gulpfile.js",
   "dependencies": {
     "backbone": "^1.3.3",
@@ -59,7 +59,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.coding.net:Mutueye/DolphinWeb.git"
+    "url": "git@github.com:Mutueye/MutueyeWeb.git"
   },
   "author": "DuPeng",
   "license": "MIT"
