--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.0",
+    "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-duration": "0.0.0",
     "gulp-if": "^2.0.1",
