--- a/bower.json
+++ b/bower.json
@@ -43,6 +43,7 @@
     "jquery": "^3.2.1",
     "highcharts": "^5.0.14",
     "iscroll": "^5.2.0",
-    "device.js": "devicejs#^0.2.7"
+    "device.js": "devicejs#^0.2.7",
+    "iCheck": "^1.0.2"
   }
 }
