--- a/bower.json
+++ b/bower.json
@@ -47,6 +47,7 @@
     "iCheck": "^1.0.2",
     "toastr": "^2.1.3",
     "summernote": "^0.8.8",
-    "bootstrap-fileinput": "^4.4.3"
+    "bootstrap-fileinput": "^4.4.3",
+    "tableexport.jquery.plugin": "tableExport.jquery.plugin#^1.9.5"
   }
 }
