--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,7 @@
     "toastr": "^2.1.3",
     "summernote": "^0.8.8",
     "bootstrap-fileinput": "^4.4.3",
-    "tableexport.jquery.plugin": "tableExport.jquery.plugin#^1.9.5"
+    "tableexport.jquery.plugin": "tableExport.jquery.plugin#^1.9.5",
+    "laydate": "*"
   }
 }
