--- a/bower.json
+++ b/bower.json
@@ -49,6 +49,7 @@
     "summernote": "^0.8.8",
     "bootstrap-fileinput": "^4.4.4",
     "tableexport.jquery.plugin": "tableExport.jquery.plugin#^1.9.5",
-    "laydate": "*"
+    "laydate": "*",
+    "bootstrap-switch": "^3.3.4"
   }
 }
