--- a/bower.json
+++ b/bower.json
@@ -54,7 +54,8 @@
     "underscore": "^1.8.3",
     "bootstrap-duallistbox": "^3.0.6",
     "patternfly-bootstrap-treeview": "^2.1.5",
-    "select2": "^4.0.5"
+    "select2": "^4.0.5",
+    "countUp.js": "countup#^1.9.3"
   },
   "resolutions": {
     "jquery": "~1.9.0"
