--- a/bower.json
+++ b/bower.json
@@ -55,7 +55,9 @@
     "bootstrap-duallistbox": "^3.0.6",
     "patternfly-bootstrap-treeview": "^2.1.5",
     "select2": "^4.0.5",
-    "countUp.js": "countup#^1.9.3"
+    "countUp.js": "countup#^1.9.3",
+    "Jquery": "^3.3.1",
+    "ion-sound": "ionsound#^3.0.7"
   },
   "resolutions": {
     "jquery": "~1.9.0"
